fix(ie11): fix squashed images

--- a/src/styles/modules/product.scss
+++ b/src/styles/modules/product.scss
@@ -74,7 +74,6 @@
     img {
         max-height: 100%;
         max-width: 100%;
-        width: 100%;
     }
 }
 
